--- a/index.html
+++ b/index.html
@@ -7,3 +7,132 @@
   <title>Field & Feast</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
+<body>
+
+<header>
+
+  
+  <section class="hero">
+    <div class="container hero-content">
+      <img src="images/fieldandfeast-logo.png" alt="Field & Feast olive branch logo" class="logo">
+      <h1>Field & Feast</h1>
+      <p class="tagline">Harvested with Care, Served with Elegance</p>
+    </div>
+  </section>
+
+  
+  <nav aria-label="Primary Navigation">
+    <ul class="nav-links">
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#offerings">Offerings</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+    </ul>
+  </nav>
+
+</header>
+
+<main>
+
+ 
+  <section id="about" class="section container">
+    <h2>Welcome to Field & Feast</h2>
+
+    <p>
+      At Field & Feast, we believe that the finest meals begin at the source.
+      Rooted in tradition yet refined for the modern palate, our farm-to-table philosophy
+      celebrates seasonality, sustainability, and craftsmanship. From the sun-drenched
+      fields where our produce is grown to the artfully curated dishes we serve,
+      every detail is designed to bring you an experience of unparalleled quality and flavor.
+    </p>
+
+    <hr>
+  </section>
+
+  <section id="offerings" class="section container">
+    <h2>Our Offerings</h2>
+
+    <div class="offerings-grid">
+
+      <article class="card">
+        <h3>Artisan Provisions</h3>
+        <p>
+          Hand-selected, seasonal ingredients sourced from our estate farm and trusted local growers.
+          Each item is chosen for its freshness, flavor, and integrity.
+        </p>
+      </article>
+
+      <article class="card">
+        <h3>Exclusive Dining Experiences</h3>
+        <p>
+          Join us for intimate chef-led tastings and farm-to-table feasts,
+          where carefully crafted menus highlight the best of the season.
+        </p>
+      </article>
+
+      <article class="card full-width">
+        <h3>The Field & Feast Monthly Basket</h3>
+        <p>
+          Experience a curated selection of premium seasonal ingredients delivered to your doorstep each month.
+        </p>
+
+        <ul>
+          <li>Hand-Harvested Produce: Fresh, organic fruits and vegetables.</li>
+          <li>Artisan-Crafted Goods: Specialty cheeses, house-made preserves, and small-batch baked goods.</li>
+          <li>Exclusive Recipes & Pairings: Thoughtfully designed by our chefs to inspire culinary creativity.</li>
+        </ul>
+
+        <p>
+          Elevate your home dining with the finest farm-to-table offerings, elegantly packaged and delivered with care.
+        </p>
+      </article>
+
+    </div>
+
+    <hr>
+  </section>
+
+  
+  <section id="gallery" class="section container">
+    <h2>A Gallery of Field & Feast</h2>
+
+    <p>
+      Experience the elegance and artistry behind Field & Feast through our curated collection of images.
+      From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations,
+      each photo tells the story of our commitment to excellence.
+    </p>
+
+    <div class="gallery-grid">
+
+      <figure>
+        <img src="images/tomatoes-200w.jpg" alt="Heirloom tomatoes at peak ripeness">
+        <figcaption><i>Heirloom tomatoes at peak ripeness.</i></figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/olive-oil-200w.jpg" alt="Drizzling golden olive oil">
+        <figcaption><i>Drizzling golden olive oil over fresh harvest.</i></figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/table-setting-200w.jpg" alt="Elegant tablescape">
+        <figcaption><i>Elegant tablescape under the evening sky.</i></figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/chef-plating-200w.jpg" alt="Chef plating seasonal dish">
+        <figcaption><i>Artful plating with seasonal ingredients.</i></figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/basket-200w.jpg" alt="Monthly basket">
+        <figcaption><i>Our monthly basket, curated with care.</i></figcaption>
+      </figure>
+
+    </div>
+
+    <a href="#" class="gallery-button">View Our Full Gallery</a>
+    <hr class="gallery-hr">
+
+  </section>
+
+</main>
