--- a/index.html
+++ b/index.html
@@ -136,3 +136,16 @@
   </section>
 
 </main>
+<footer>
+  <div class="container footer-content">
+    <address>
+      123 Estate Lane, Wine Country, CA<br>
+      (555) 123-4567<br>
+      <a href="mailto:hello@fieldandfeast.com">hello@fieldandfeast.com</a>
+    </address>
+    <p>Instagram Facebook</p>
+  </div>
+</footer>
+
+</body>
+</html>
